--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "rwasm"
-version = "1.0.0"
+version = "1.0.0+mswasm"
 authors = ["Jay Bosamiya <jaybosamiya@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "3.0.0-beta.1"
+clap = { version = "3.1.6", features = ["derive"] }
 color-eyre = "0.5.0"
 
 # Speed up `backtrace` even on a debug build. Suggested by `color-eyre`.
