--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "rwasm"
-version = "1.0.0"
+version = "1.0.1"
 authors = ["Jay Bosamiya <jaybosamiya@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "3.0.0-beta.1"
-color-eyre = "0.5.0"
+clap = { version = "3.2.22", features = ["derive"] }
+color-eyre = "0.6.2"
 
 # Speed up `backtrace` even on a debug build. Suggested by `color-eyre`.
 [profile.dev.package.backtrace]
